Update run_with_specific_param.bat